feat: Enhance SecurityConfigurationTest with clean structure and best practices
- Implement structured and reusable constants for endpoints, client details, and ports.
- Utilize `@DynamicPropertySource` for dynamic property configuration.
- Set up containers for OAuth2 Authorization Server and Redis with robust waiting conditions.
- Configure WebTestClient with documentation filters and preprocessors.
- Add `shouldReturnPrincipalForValidToken` test to validate principal retrieval with token.
- Introduce helper methods for token generation and client credentials encoding.
- Ensure code readability, consistent formatting, and adherence to industry standards.

This update improves test maintainability, reusability, and overall quality.